<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <!--- Checkable Behavior = single означает одиночный выбор эллементов в группе -->
        <item
            android:title="@string/menu_navigation_view_help"
            android:id="@+id/menu_navigation_view_help"
            android:icon="@drawable/ic_help_circle"/>
        <item
            android:title="@string/menu_navigation_view_feedback"
            android:id="@+id/menu_navigation_view_feedback"
            android:icon="@drawable/ic_email_open"/>
        <item
            android:title="@string/menu_navigation_view_settings"
            android:id="@+id/menu_navigation_view_settings"
            android:icon="@drawable/ic_settings"/>
    </group>
    <item android:title="@string/sub_menu_navigation_view_more">
        <menu>
            <item
                android:title="@string/sub_menu_navigation_view_assess"
                android:id="@+id/sub_menu_navigation_view_assess"
                android:icon="@drawable/ic_checkbox_multiple_marked"/>
            <item
                android:title="@string/sub_menu_navigation_view_about_us"
                android:id="@+id/sub_menu_navigation_view_about_us"
                android:icon="@drawable/ic_account_box"/>
        </menu>
    </item>
</menu>