<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_view"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="?attr/colorPrimary"
                    android:paddingLeft="20dp"
                    android:textStyle="bold" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_theme"
                    android:gravity="left|center_vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/content_common_settings_button_application_theme"
                    android:onClick="buttonsListener"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_full_screen"
                    android:gravity="left|center_vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:onClick="buttonsListener"
                    android:id="@+id/content_common_settings_button_application_full_screen" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_language"
                    android:gravity="left|center_vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:onClick="buttonsListener"
                    android:id="@+id/content_common_settings_button_language" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_help"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="?attr/colorPrimary"
                    android:paddingLeft="20dp"
                    android:textStyle="bold" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_help"
                    android:gravity="left|center_vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/content_common_settings_button_help"
                    android:onClick="buttonsListener" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>