<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="112dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/profile"
                        android:layout_marginLeft="24dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="24dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/content_settings_edit_text_user_name_hint"
                        android:textSize="18dp"
                        android:textColor="@android:color/black"
                        android:gravity="left"
                        android:id="@+id/content_settings_edit_text_user_name"
                        android:layout_alignLeft="@+id/content_settings_edit_text_user_secname"
                        android:layout_alignStart="@+id/content_settings_edit_text_user_secname"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="10dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/content_settings_text_user_secname_hint"
                        android:id="@+id/content_settings_edit_text_user_secname"
                        android:gravity="left"
                        android:textSize="18dp"
                        android:textColor="@android:color/black"
                        android:layout_below="@+id/content_settings_edit_text_user_name"
                        android:layout_toRightOf="@+id/profile_image"
                        android:layout_marginLeft="21dp"
                        android:layout_marginRight="10dp"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Пол:"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_marginLeft="20dp"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:id="@+id/content_settings_radio_group">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_main_radio_button_male"
                        android:layout_weight="1"
                        android:id="@+id/content_settings_radio_button_male"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_main_radio_button_female"
                        android:layout_weight="1"
                        android:id="@+id/content_settings_radio_button_female"/>
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_settings_biometric_data"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="?attr/colorPrimary"
                    android:paddingLeft="20dp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/ButtonTheme"
                    android:id="@+id/content_settings_ll_date_born"
                    android:onClick="LinearLayoutListener">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_settings_button_date_born"
                        android:gravity="left|center_vertical"
                        style="@android:style/TextAppearance.Holo.Large"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_settings_date_born"
                        android:text="@string/content_settings_text_no_changed"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/ButtonTheme"
                    android:id="@+id/content_settings_ll_mail"
                    android:onClick="LinearLayoutListener">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_settings_button_mail"
                        android:gravity="left|center_vertical"
                        style="@android:style/TextAppearance.Holo.Large"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_settings_mail"
                        android:text="@string/content_settings_text_no_changed"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_settings_text_address"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="?attr/colorPrimary"
                    android:paddingLeft="20dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/ButtonTheme"
                    android:id="@+id/content_settings_ll_address"
                    android:onClick="LinearLayoutListener">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_settings_text_address"
                        android:gravity="left|center_vertical"
                        style="@android:style/TextAppearance.Holo.Large"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_settings_address"
                        android:text="@string/content_settings_text_no_changed"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>